# astorun-latest

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  req.txt  sample_env
FrontendPractice/: asgi.py  dev_settings.py  settings.py  settings1.py  settings2.py  settings3.py  urls.py  wsgi.py
bookmarks/: urls.py  views.py
bookmarks/templates/bookmarks/: bookmarks.html  delete_me.html
collection/: admin.py  local_url_generator.py  models.py  urls.py  views.py
collection/migrations/: 0001_initial.py  0002_collection_is_actvie.py  0003_rename_is_actvie_collection_actvie.py  0004_rename_actvie_collection_is_active.py
collection/templates/collection/: buy_collection.html  collection.html  (+1 more)
config/: astorun.conf  gunicorn.conf.py
contacts/: urls.py  views.py
mainFront/: admin.py  apps.py  models.py  tests.py  translation.py  urls.py  views.py
mainFront/migrations/: 0001_initial.py
news/: admin.py  models.py  translation.py  urls.py  views.py
news/migrations/: 0001_initial.py
nginx/: Dockerfile  astorun.conf  nginx.conf  old.conf
order/: admin.py  const.py  context_processors.py  mail.py  models.py  tests.py  tg.py  translation.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_auto_20220718_1438.py  0003_auto_20220718_1728.py
product/: admin.py  const.py  models.py  translation.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20221130_1337.py  0002_remove_productimage_is_main.py
scripts/: create_basic.py
(+59 files in other folders)
